feat: course comment dialog

--- a/src/app/pages/course/components/course-content/course-content.component.html
+++ b/src/app/pages/course/components/course-content/course-content.component.html
@@ -93,7 +93,7 @@
                                 <p>成為第一個評分者，幫大家找到想上的課！</p>
                             </div>
                             <!-- 下方評分span補一個 @click="openReviewWindow()" -->
-                            <div class="btn-rectangle--sm"><span>評分</span></div>
+                            <div class="btn-rectangle--sm" (click)="addCourseComment()"><span>評分</span></div>
                         </div>
                     </ng-template>
                 </div>
