fix: course content scss

--- a/src/app/pages/course/components/course-search/course-search.component.scss
+++ b/src/app/pages/course/components/course-search/course-search.component.scss
@@ -1,5 +1,5 @@
 // button.scss
-@import '../../../../../assets/scss/componentes/button.scss';
+@import 'src/assets/scss/componentes/button.scss';
 
 //course.sass
 /* colors */
