show search-filer courses on navbar

--- a/src/app/pages/course/components/navbar/navbar.component.html
+++ b/src/app/pages/course/components/navbar/navbar.component.html
@@ -2,122 +2,40 @@
     <div id="navbar" class="hub_navbar">
         <div class="hub_navbar__left_area">
             <a class="hub_navbar__logo" href="/course"></a>
-            <input class="hub_navbar__search" type="text" placeholder="搜尋「課程名」或「教師名」" />
-            <div class="hub_navbar__search__cancel"></div>
-            <div class="hub_navbar__search__dropdown">
-                <!---->
-                <div class="list_course_item">
-                    <div class="list_course_item_left">
-                        <p class="list_course_item_category text_20 text_white A9"> 通 </p>
-                    </div>
-                    <div class="list_course_item_mid">
-                        <p class="list_course_item_title text_16">A9-600 拍出跨域資訊應用首部曲--python</p>
-                        <p class="list_course_item_description text_14 text_dark">陳培殷 — </p>
-                    </div>
-                    <div class="list_course_item_right"></div>
-                </div>
-                <div class="list_course_item">
-                    <div class="list_course_item_left">
-                        <p class="list_course_item_category text_20 text_white A9"> 通 </p>
-                    </div>
-                    <div class="list_course_item_mid">
-                        <p class="list_course_item_title text_16">A9-600 拍出跨域資訊應用首部曲--python</p>
-                        <p class="list_course_item_description text_14 text_dark">陳培殷 — </p>
-                    </div>
-                    <div class="list_course_item_right"></div>
-                </div>
-                <div class="list_course_item">
-                    <div class="list_course_item_left">
-                        <p class="list_course_item_category text_20 text_white A9"> 通 </p>
-                    </div>
-                    <div class="list_course_item_mid">
-                        <p class="list_course_item_title text_16">A9-600 拍出跨域資訊應用首部曲--python</p>
-                        <p class="list_course_item_description text_14 text_dark">陳培殷 — </p>
-                    </div>
-                    <div class="list_course_item_right"></div>
-                </div>
-                <div class="list_course_item">
-                    <div class="list_course_item_left">
-                        <p class="list_course_item_category text_20 text_white A9"> 通 </p>
-                    </div>
-                    <div class="list_course_item_mid">
-                        <p class="list_course_item_title text_16">A9-600 拍出跨域資訊應用首部曲--python</p>
-                        <p class="list_course_item_description text_14 text_dark">陳培殷 — </p>
-                    </div>
-                    <div class="list_course_item_right"></div>
-                </div>
-                <div class="list_course_item">
-                    <div class="list_course_item_left">
-                        <p class="list_course_item_category text_20 text_white A9"> 通 </p>
-                    </div>
-                    <div class="list_course_item_mid">
-                        <p class="list_course_item_title text_16">A9-600 拍出跨域資訊應用首部曲--python</p>
-                        <p class="list_course_item_description text_14 text_dark">陳培殷 — </p>
-                    </div>
-                    <div class="list_course_item_right"></div>
-                </div>
-                <div class="list_course_item">
-                    <div class="list_course_item_left">
-                        <p class="list_course_item_category text_20 text_white A9"> 通 </p>
-                    </div>
-                    <div class="list_course_item_mid">
-                        <p class="list_course_item_title text_16">A9-600 拍出跨域資訊應用首部曲--python</p>
-                        <p class="list_course_item_description text_14 text_dark">陳培殷 — </p>
-                    </div>
-                    <div class="list_course_item_right"></div>
-                </div>
-                <div class="list_course_item">
-                    <div class="list_course_item_left">
-                        <p class="list_course_item_category text_20 text_white A9"> 通 </p>
-                    </div>
-                    <div class="list_course_item_mid">
-                        <p class="list_course_item_title text_16">A9-600 拍出跨域資訊應用首部曲--python</p>
-                        <p class="list_course_item_description text_14 text_dark">陳培殷 — </p>
-                    </div>
-                    <div class="list_course_item_right"></div>
-                </div>
-                <div class="list_course_item">
-                    <div class="list_course_item_left">
-                        <p class="list_course_item_category text_20 text_white A9"> 通 </p>
-                    </div>
-                    <div class="list_course_item_mid">
-                        <p class="list_course_item_title text_16">A9-600 拍出跨域資訊應用首部曲--python</p>
-                        <p class="list_course_item_description text_14 text_dark">陳培殷 — </p>
-                    </div>
-                    <div class="list_course_item_right"></div>
-                </div>
-                <div class="list_course_item">
-                    <div class="list_course_item_left">
-                        <p class="list_course_item_category text_20 text_white C6"> 生 </p>
-                    </div>
-                    <div class="list_course_item_mid">
-                        <p class="list_course_item_title text_16">C6-006 生物資料分析：Python語言</p>
-                        <p class="list_course_item_description text_14 text_dark">劉宗霖* — [2]3~4 </p>
-                    </div>
-                    <div class="list_course_item_right"></div>
-                </div>
-                <div class="list_course_item">
-                    <div class="list_course_item_left">
-                        <p class="list_course_item_category text_20 text_white J0"> 敏 </p>
-                    </div>
-                    <div class="list_course_item_mid">
-                        <p class="list_course_item_title text_16">J0-001 Python程式設計入門</p>
-                        <p class="list_course_item_description text_14 text_dark">吳進義 — [2]2~4 </p>
-                    </div>
-                    <div class="list_course_item_right"></div>
-                </div>
-            </div>
 
+            <input class="hub_navbar__search" type="text" placeholder="搜尋「課程名」或「教師名」" [(ngModel)]="query" />
+            <div class="hub_navbar__search__cancel"></div>
+            <ng-container *ngIf="query">
+                <div class="hub_navbar__search__dropdown">
+                    <!---->
+                    <p class="hub_navbar__search__dropdown__no_result text_dark" [hidden]="result.length && query">查無此關鍵字結果。</p>
+
+                    <div class="list_course_item" *ngFor="let course of displayCourseList | searchFilter:query as result">
+                        <div class="list_course_item_left">
+                            <p class="list_course_item_category text_white text_20" [ngClass]="course.deptId">
+                                {{deptTransCat(course.deptId,course.deptName)}}</p>
+                        </div>
+                        <div class="list_course_item_mid">
+                            <p class="list_course_item_title text_16">{{course.deptId}}-{{course.courseIndex}} {{course.courseName}}
+                            </p>
+                            <p class="list_course_item_description text_14 text_dark">{{course.deptId}} — {{course.teacher}} — {{course.time}}
+                            </p>
+                        </div>
+                        <div class="list_course_item_right"></div>
+
+                    </div>
+                </div>
+            </ng-container>
 
 
         </div>
         <div class="hub_navbar__right_area">
-            <div class="hub_navbar__link" [ngClass]="{'on':windowTab === 'search'}" routerLink="/course/search"> 找課程</div>
+            <div class="hub_navbar__link" routerLink="/course/search" routerLinkActive="on"> 找課程</div>
             <!-- <a href="/api/user/fblogin">登入</a> -->
-            <div class="hub_navbar__link" [ngClass]="{'on':windowTab === 'timetable'}" routerLink="/course/timetable"> 排課表 <span class="wishlist_count">0</span></div>
-            <img (click)="isDropdownOpen = !isDropdownOpen" [ngClass]="{'on':isDropdownOpen}" src="https://nckuhub.com/dist/images/course/sad_hugecat.png" class="hub_navbar__profile">
-            <div [hidden]="!isDropdownOpen" class="hub_navbar__profile__dropdown">
-                <div class="hub_navbar__profile__dropdown__info not_login"><img src="../../images/course/sad_hugecat.svg" class="hub_navbar__profile__dropdown__info__photo">
+            <div class="hub_navbar__link" routerLink="/course/timetable" routerLinkActive="on"> 排課表 <span class="wishlist_count">0</span></div>
+            <img (click)="isDropdownOpen = !isDropdownOpen" [ngClass]="{'on':isDropdownOpen}" src="/assets/images/course/sad_hugecat.png" class="hub_navbar__profile">
+            <div *ngIf="isDropdownOpen" class="hub_navbar__profile__dropdown">
+                <div class="hub_navbar__profile__dropdown__info not_login"><img src="/assets/images/course/sad_hugecat.png" class="hub_navbar__profile__dropdown__info__photo">
                     <div class="hub_navbar__profile__dropdown__info__detail">
                         <div class="nav_profile_name">訪客貓咪</div>
                         <div class="nav_profile_dept">請登入網站，</div>
