--- a/src/app/pages/course/components/navbar/navbar.component.html
+++ b/src/app/pages/course/components/navbar/navbar.component.html
@@ -1,50 +1,19 @@
 <nav>
     <div id="navbar" class="hub_navbar">
         <div class="hub_navbar__left_area">
-            <a class="hub_navbar__logo" href="/course"></a>
-
-            <input class="hub_navbar__search" type="text" placeholder="搜尋「課程名」或「教師名」" [(ngModel)]="query" />
+            <a class="hub_navbar__logo" href="/src"></a>
+            <input
+                class="hub_navbar__search"
+                type="text"
+                placeholder="搜尋「課程名」或「教師名」"
+            />
             <div class="hub_navbar__search__cancel"></div>
-            <ng-container *ngIf="query && (displayCourseList | searchFilter:query) as filterResult">
-                <div class="hub_navbar__search__dropdown">
-                    <div class="list_course_item" *ngFor="let course of filterResult">
-                        <div class="list_course_item_left">
-                            <p class="list_course_item_category text_white text_20" [ngClass]="course.deptId">
-                                {{deptTransCat(course.deptId,course.deptName)}}</p>
-                        </div>
-                        <div class="list_course_item_mid">
-                            <p class="list_course_item_title text_16">{{course.deptId}}-{{course.courseIndex}} {{course.courseName}}
-                            </p>
-                            <p class="list_course_item_description text_14 text_dark">{{course.deptId}} — {{course.teacher}} — {{course.time}}
-                            </p>
-                        </div>
-                        <div class="list_course_item_right"></div>
-                    </div>
-                    <p class="hub_navbar__search__dropdown__no_result text_dark" *ngIf="filterResult.length == 0">查無此關鍵字結果。</p>
-                </div>
-            </ng-container>
-
-
         </div>
         <div class="hub_navbar__right_area">
-            <div class="hub_navbar__link" routerLink="/course/search" routerLinkActive="on"> 找課程</div>
-            <!-- <a href="/api/user/fblogin">登入</a> -->
-            <div class="hub_navbar__link" routerLink="/course/timetable" routerLinkActive="on"> 排課表 <span class="wishlist_count">0</span></div>
-            <img (click)="isDropdownOpen = !isDropdownOpen" [ngClass]="{'on':isDropdownOpen}" src="/assets/images/course/sad_hugecat.png" class="hub_navbar__profile">
-            <div *ngIf="isDropdownOpen" class="hub_navbar__profile__dropdown">
-                <div class="hub_navbar__profile__dropdown__info not_login"><img src="/assets/images/course/sad_hugecat.png" class="hub_navbar__profile__dropdown__info__photo">
-                    <div class="hub_navbar__profile__dropdown__info__detail">
-                        <div class="nav_profile_name">訪客貓咪</div>
-                        <div class="nav_profile_dept">請登入網站，</div>
-                        <div class="nav_profile_grade">以使用完整功能！</div> <a class="hub_navbar__profile__dropdown__goto mobile_only" style="display: none;">開通小幫手</a></div>
-                </div> <a class="hub_navbar__profile__dropdown__goto desktop_only" style="display: none;">開通小幫手</a> <a href="/api/user/fblogin" class="hub_navbar__profile__dropdown__goto desktop_only">立即登入 / 註冊</a>
-                <div class="hub_navbar__profile__dropdown__links">
-                    <!-- <a href="/api/user/fblogin" class="mobile_only">登入網站</a> -->
-                    <a href="https://www.facebook.com/nckuhub" target="_blank">粉絲專頁</a>
-                    <a href="https://www.messenger.com/t/nckuhub" target="_blank">回報問題</a>
-                    <a href="/privacy" target="_blank">隱私權政策</a>
-                    <a href="/user/logout" style="display: none;">登出帳戶</a></div>
-            </div>
+<!--            <div>找課程</div>-->
+            <a href="/api/user/fblogin">登入</a>
+<!--            <div>排課表 <span class="wishlist_count"></span></div>-->
+            <img class="hub_navbar__profile" />
         </div>
     </div>
 </nav>
